k8s/apps/secure-share/ingress.yml
# k8s/apps/secure-share/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secure-share-ingress
  namespace: production
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - secured-share.org
    secretName: secure-share-tls
  rules:
  - host: secured-share.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: secure-share-service
            port:
              number: 80
